frontend/test/should_pass/exectype_SetmapRemUntyped.grg
using exectype;

rule r
{
	modify  {
		exec({::x.rem(::y)} || {::u.rem(::v)});
	}
}