frontend/test/should_fail/exec_019.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  modify{
    return (y);
    exec(c=c   & (c:B)=r(c) & (c:B)=r(c));
  }
}
